--- a/FRONTEND/index.css
+++ b/FRONTEND/index.css
@@ -6,8 +6,18 @@
     
 }
 
-#pagRandom {
-    background: #fcf4f7;
+body#pagRandom {
+    background: rgb(247, 225, 225);
+}
+
+
+header#pagina3 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%vw;
+    margin: 0;
+    
 }
 
 body {
@@ -224,3 +234,182 @@ footer li {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
 }
+
+/* Pagina 3 - de Razas  - Hoja de Estilo para esta pagina del sitio */
+
+body#pagRazas {
+    background: rgb(223, 221, 221);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#pagina3 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 35px;
+    justify-content: center;
+    background-color: rgb(245, 202, 86);
+    
+}
+
+#pagina3 p {
+    margin: 0;
+    
+    
+}
+#escogerRazas {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 30px;
+    justify-content: center;
+    background-color: rgb(211, 253, 237);
+}
+
+#seleccionRazas {
+    padding: 50px;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 35px;
+    color: black;
+    justify-content: center;
+}
+
+main#escogerRazas {
+    justify-content: center;
+}
+
+
+/*#opcionesMascotas {
+    width: 300px;
+    height: 50px;
+    margin-left: 150px;
+    margin-top: 10px;
+    font-size: 20px;
+}*/
+
+.opcionesMascotas {
+    width: 300px;
+    height: 50px;
+    margin-left: 150px;
+    margin-top: 10px;
+    font-size: 20px;
+}
+
+form select {
+    justify-content: center;
+}
+
+.perritos {
+
+    box-sizing: border-box;
+    border-radius: 15px;
+    background-color: rgb(139, 84, 11);
+    width: 500px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.perritos img {
+    width: 100%vw;
+    height: auto;    
+    max-height: 350px;
+}
+
+.perritos h2 {
+    text-align: center;
+    
+}
+
+.perritos h1 {
+    margin-top: -1rem;
+    text-transform: uppercase;
+    align-items: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+/* Fin da la pagina 3 */
+
+/*  Para medias Queries */
+
+@media only screen and (max-width: 600px) {
+    body#pagRazas {
+      background-color: rgb(223, 239, 245);
+      width: 100vw;
+      box-sizing: border-box;
+      
+    }
+
+    /* Para la pagina 3 */
+
+   /* Del Header */
+
+    #pagina3 {
+
+        background-color: rgb(245, 225, 170);
+        width: 100%;
+        height: 100px;
+        text-align: center;
+    }
+
+    #pagina3 p {
+        margin-top: 1rem;
+        margin: 1.25rem;
+
+        width: 100%;
+        text-shadow: 2px 2px 8px rgb(92, 83, 230);
+        text-transform: uppercase;
+        font-size: 25px;
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    }
+    
+    main#escogerRazas {
+        width: 100vw;
+        margin-left: 0px;
+    }
+
+    #escogerRazas {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    #seleccionRazas {
+        margin-left: 0px;
+        padding-left: 0px;
+        justify-content: space-around;
+    }
+
+    #seleccion label {
+        width: 100%;
+        font-size: 20px;
+        text-align: center;
+    }
+
+    form#seleccion {
+        display: flex;
+        flex-wrap: wrap;
+        margin: auto;
+    }
+
+    select.opcionesMascotas {
+        width: 100%;
+        font-size: 20px;
+        text-align: center;
+        margin-left: 20px;
+        margin-top: 20px;
+    }
+
+    #fotoRazas {
+        margin: auto;
+    }
+    .perritos,
+    .perritos img {
+
+        max-width: 75vw;
+        max-height: 400px;
+    }
+  }
